ci/static/css/ci/chat.css
html, body {
    width: 100%;
    height: 100%;
    margin: 0px;
    overflow: hidden;
}

.divBackGround {
    width: calc(100% - 14px);
    height: calc(100% - 14px);
    border-style: solid;
    border-width: 2px;
    border-color: black;
    margin: 5px;
}

.divHeader {
    width: 90%;
    height: 10%;
    border-style: solid;
    border-width: 2px;
    border-color: green;
    margin: 0px auto;
}

.divSystemMessage {
    width: 90%;
    height: 20px;
    border-style: solid;
    border-width: 2px;
    border-color: green;
    margin: 0px auto;
    text-align: center;
}

.divContent {
    width: 90%;
    height: 70%;
    border-style: solid;
    border-width: 2px;
    border-color: black;
    margin: 0px auto;
}

.divLeftChatFrame {
    width: calc(50% - 4px);
    height: 100%;
    position: relative;
    border-style: solid;
    border-width: 2px;
    border-color: blue;
    margin: 0% auto;
    float: left;
}

.divLeftChatFrame h3{
    position: absolute;
    top: 5px;
    left: 5px;
    margin: 0px;
}

.divLeftChatFrame .divLeftMessage{
    width: 70%;
    height: 85%;
    position: absolute;
    top: 0px;
    right: 0px;
    margin: 0px;
    border-color: blue;
    border-style: solid;
    overflow-y: hidden;
    direction: rtl;
    text-align: left;
}

.divLeftMessage div{
    margin-top: 5px;
    margin-left: 5px;
    margin-right: auto;
    text-align: left;
    direction: ltr;
    word-break: break-all;
}

.divLeftChatFrame input{
    position: absolute;
    bottom: 5px;
    left: 45%;
}

.divRightChatFrame {
    width: calc(50% - 4px);
    height: 100%;
    position: relative;
    border-style: solid;
    border-width: 2px;
    border-color: red;
    margin: 0% auto;
    float: right;
}

.divRightChatFrame h3{
    position: absolute;
    top: 5px;
    right: 5px;
    margin: 0px;
}

.divRightChatFrame .divRightMessage{
    width: 70%;
    height: 85%;
    position: absolute;
    top: 0px;
    left: 0px;
    margin: 0px;
    border-color: red;
    border-style: solid;
    overflow: hidden;
    text-align: right;
}

.divRightMessage div{
    margin-top: 5px;
    margin-left: auto;
    margin-right: 5px;
    text-align: left;
    word-break: break-all;
}

.divRightChatFrame input{
    position: absolute;
    bottom: 5px;
    right: 45%;
}

.divEmptyMsg {
    width: 100%;
}

.divTextInput {
    width: 90%;
    height: 10%;
    position: relative;
    border-style: solid;
    border-width: 2px;
    border-color: gray;
    margin: 0px auto;
}

.divTextInput .textKeyIn{
    position: absolute;
    width: 65%;
    height: 25px;
    top: 5px;
    left: 10%;
}

.divTextInput .btnSendText{
    position: absolute;
    width: 10%;
    top: 5px;
    left: calc(75% + 10px);
}

